--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="" class = "button button-accent button-small">Project Details</a>
       </figcaption>
     </figure>
-
+    <p class="small-white-text">Photo by Nguyen Kiet on Unsplash</p>
   </section>
 
   <footer>
@@ -90,6 +90,7 @@
     <a href="https://github.com/jimmyli17/">Github</a>
     <span> | </span>
     <a href="https://linkedin.com/in/jimmeeeli/">LinkedIn</a>
+    <p class="small-white-text-2">Photo by Lucas Andrade on Unsplash</p>
   </footer>
 </body>
 
