--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset = "UTC-8">
-  <meta name = "viewport" content = "width=content-width, initial-scale-1">
+  <meta name = "viewport" content = "width=content-width, initial-scale=1.0">
   <title>Jimmy's Portfolio</title>
   <link href = "css/styles.css" rel = "stylesheet" type = "text/css">
 </head>
@@ -19,11 +19,13 @@
   </header>
 
   <section class = "home-hero">
-    <h1 class = "tagline"><strong>Up-And-Coming Software Engineer</strong><br>
-      <span id="not-bold">Studying Computer Science at the University of Rochester</span>
-    </h1>
-    <a href="#" class="button button-accent">See   My   Work</a>
-    <p class="small-white-text">Photo by Pineapple Supply Co. on Unsplash</p>
+    <div class="container">
+      <h1 class = "tagline"><strong>Up-And-Coming Software Engineer</strong><br>
+        <span id="not-bold">Studying Computer Science at the University of Rochester</span>
+      </h1>
+      <a href="#" class="button button-accent">See   My   Work</a>
+      <p class="small-white-text">Photo by Pineapple Supply Co. on Unsplash</p>
+    </div>
   </section>
 
   <section class = "home-about">
