--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         <span id="not-bold">Studying Computer Science at the University of Rochester</span>
       </h1>
       <a href="#" class="button button-accent">See   My   Work</a>
-      <p class="small-white-text">Photo by Pineapple Supply Co. on Unsplash</p>
+    </div>
+    <div class="small-white-text">
+      <div class="tooltip">
+        <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
+        <span id="pineapple" class="tooltiptext">Photo by Pineapple Supply Co. on Unsplash</span>
+      </div>
     </div>
   </section>
 
@@ -43,6 +48,12 @@
         dedicate my time to helping startups develop website that will
         impress investors with all the great stuff that they are doing.</p>
     </div>
+    <div class="small-white-text-2">
+      <div class="tooltip">
+        <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
+        <span id="my-photo" class="tooltiptext">Photo by Me</span>
+      </div>
+    </div>
   </section>
 
   <section class="portfolio">
@@ -50,18 +61,24 @@
 
     <!-- portfolio item 1 -->
     <figure class = "port-item">
-      <img src="img/portfolio-1.jpg" alt="portfolio item">
-      <figcaption class = "portf-desc">
-        <p>Project Title</p>
-        <a href="" class = "button button-accent button-small">Project Details</a>
-      </figcaption>
+      <div class="centered">
+        <div class="overlay-container">
+          <img class="portfolio-img" src="img/mv-interact-website.png" alt="Monta Vista Interact Website screenshot">
+          <div class="overlay">
+            <div class="transparent-overlay">
+              <div class="overlay-text-2">Monta Vista Interact Website</div>
+              <a href="#" class="overlay-text">Project Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </figure>
 
     <!-- portfolio item 2 -->
     <figure class = "port-item">
       <img src="img/portfolio-1.jpg" alt="portfolio item">
       <figcaption class = "portf-desc">
-        <p>Project Title</p>
+        <p class="project-title">Snake Online</p>
         <a href="" class = "button button-accent button-small">Project Details</a>
       </figcaption>
     </figure>
@@ -70,7 +87,7 @@
     <figure class = "port-item">
       <img src="img/portfolio-1.jpg" alt="portfolio item">
       <figcaption class = "portf-desc">
-        <p>Project Title</p>
+        <p class="project-title">Grammar Parsers</p>
         <a href="" class = "button button-accent button-small">Project Details</a>
       </figcaption>
     </figure>
@@ -79,11 +96,16 @@
     <figure class = "port-item">
       <img src="img/portfolio-1.jpg" alt="portfolio item">
       <figcaption class = "portf-desc">
-        <p>Project Title</p>
+        <p class="project-title">Street Mapping Application</p>
         <a href="" class = "button button-accent button-small">Project Details</a>
       </figcaption>
     </figure>
-    <p class="small-white-text">Photo by Nguyen Kiet on Unsplash</p>
+    <div class="small-white-text">
+      <div class="tooltip">
+        <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
+        <span class="tooltiptext">Photo by Nguyen Kiet on Unsplash</span>
+      </div>
+    </div>
   </section>
 
   <footer>
@@ -92,7 +114,12 @@
     <a href="https://github.com/jimmyli17/">Github</a>
     <span> | </span>
     <a href="https://linkedin.com/in/jimmeeeli/">LinkedIn</a>
-    <p class="small-white-text-2">Photo by Lucas Andrade on Unsplash</p>
+    <div class="small-white-text-2">
+      <div class="tooltip">
+        <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
+        <span class="tooltiptext">Photo by Lucas Andrade on Unsplash</span>
+      </div>
+    </div>
   </footer>
 </body>
 
