day15:added Pardon Our Dust banner

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <link href = "css/styles.css" rel = "stylesheet" type = "text/css">
 </head>
 <body>
+
+  <div class = "cookie-banner">
+    <div class = "container2">
+      <h2>Please Pardon Our Dust</h2>
+      <p>Put on your safety hats, folks! We are currently undergoing renovations for our website. Thank you for your patience.</p>
+      <a href = "" id = "got-it" class = "button">Okay, got it!</a>
+    </div>
+  </div>
+
   <header>
     <h1 class = "title">Jimmy Li</h1>
     <nav>
@@ -121,6 +130,10 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src = "js/global.js"></script>
+
 </body>
 
 </html>
