day20:main buttons scrolling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <h1 class = "title">Jimmy Li</h1>
     <nav>
       <ul>
-        <li> <a href="#">Home</a> </li>
-        <li> <a href="#">About</a> </li>
-        <li> <a id="contact-button" href="#">Contact</a> </li>
+        <li> <a href="#home" id="home-button">Home</a> </li>
+        <li> <a href="#about" id="about-button">About</a> </li>
+        <li> <a href="#contact" id="contact-button">Contact</a> </li>
       </ul>
     </nav>
   </header>
@@ -32,7 +32,7 @@
       <h1 class = "tagline"><strong>Up-And-Coming Software Engineer</strong><br>
         <span id="not-bold">Studying Computer Science at the University of Rochester</span>
       </h1>
-      <a href="#" class="button button-accent">See   My   Work</a>
+      <a href="#portfolio" class="button button-accent" id="see-my-work">See   My   Work</a>
     </div>
     <div class="small-white-text">
       <div class="tooltip">
