--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </section>
 
   <footer>
-    <!-- Social media buttons/icons -->
+    <!-- Social media buttons/icons go here -->
     <h2>Find Me Here On</h2>
     <a href="https://github.com/jimmyli17/">Github</a>
     <span> | </span>
