--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
   </section>
 
   <footer>
-    <!-- Social media buttons/icons go here -->
-    <h2>Find Me Here On</h2>
+    <!-- Social media buttons/icons -->
+    <h2>Find Me Here On:</h2>
     <a href="https://github.com/jimmyli17/">Github</a>
     <span> | </span>
     <a href="https://linkedin.com/in/jimmeeeli/">LinkedIn</a>
