completed-beta-ver

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="overlay">
             <div class="transparent-overlay">
               <div class="overlay-text-2">Monta Vista Interact Website</div>
-              <a href="#" class="overlay-text">Project Details</a>
+              <a href="https://monta-vista-interact-club.herokuapp.com/home" class="overlay-text">View Project</a>
             </div>
           </div>
         </div>
@@ -85,30 +85,35 @@
 
     <!-- portfolio item 2 -->
     <figure class = "port-item">
-      <img src="img/portfolio-1.jpg" alt="portfolio item">
-      <figcaption class = "portf-desc">
-        <p class="project-title">Snake Online</p>
-        <a href="" class = "button button-accent button-small">Project Details</a>
-      </figcaption>
+      <div class="centered">
+        <div class="overlay-container">
+          <img class="portfolio-img" src="img/snake-online.png" alt="Classic Snake Online Gameplay">
+          <div class="overlay">
+            <div class="transparent-overlay">
+              <div class="overlay-text-4">Classic Snake Online</div>
+              <a href="https://jimmyli17.github.io/snake-online/" class="overlay-text-3">View Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </figure>
 
     <!-- portfolio item 3 -->
     <figure class = "port-item">
-      <img src="img/portfolio-1.jpg" alt="portfolio item">
-      <figcaption class = "portf-desc">
-        <p class="project-title">Grammar Parsers</p>
-        <a href="" class = "button button-accent button-small">Project Details</a>
-      </figcaption>
+      <div class="centered">
+        <div class="overlay-container">
+          <img class="portfolio-img" src="img/street-mapping.png" alt="New York State Street Mapping">
+          <div class="overlay">
+            <div class="transparent-overlay">
+              <div class="overlay-text-4">New York Street Mapping Application</div>
+              <a href="https://github.com/jimmyli17/StreetMapping" class="overlay-text-3">View Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </figure>
 
-    <!-- portfolio item 4 -->
-    <figure class = "port-item">
-      <img src="img/portfolio-1.jpg" alt="portfolio item">
-      <figcaption class = "portf-desc">
-        <p class="project-title">Street Mapping Application</p>
-        <a href="" class = "button button-accent button-small">Project Details</a>
-      </figcaption>
-    </figure>
+
     <div class="small-white-text">
       <div class="tooltip">
         <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
