--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         I am currently doing my undergrad at the University of Rochester
         with a double major in Computer Science (BS) and Business (BA)
         with an expected graduation date of May 2020. At school, you can
-        find me bunkered in the library working with others on completing
-        class projects or in the classroom leading workshops and grading
+        find me bunkered in the library working with others on class 
+        projects or in the classroom leading workshops and grading
         exams for the "Data Structures & Algorithms" course on campus.</p>
       <p>During my free time, I like to build up new programming skills,
         tinker with my own side projects, compete in hack-a-thons, and
