add-grammar-parsers

--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
     <figure class = "port-item">
       <div class="centered">
         <div class="overlay-container">
+          <img class="portfolio-img" src="img/grammar-parsers-2.png" alt="Parse Trees for Arithmetic Expressions">
+          <div class="overlay">
+            <div class="transparent-overlay">
+              <div class="overlay-text-4">Grammar Parsers</div>
+              <a href="https://github.com/jimmyli17/GrammarParsers" class="overlay-text-3">View Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </figure>
+
+    <!-- portfolio item 4 -->
+    <figure class = "port-item">
+      <div class="centered">
+        <div class="overlay-container">
           <img class="portfolio-img" src="img/street-mapping.png" alt="New York State Street Mapping">
           <div class="overlay">
             <div class="transparent-overlay">
