--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         exams for the "Data Structures & Algorithms" course on campus.</p>
       <p>During my free time, I like to build up new programming skills,
         tinker with my own side projects, compete in hack-a-thons, and
-        dedicate my time to helping startups develop website that will
+        dedicate my time to helping startups develop websites that will
         impress investors with all the great stuff that they are doing.</p>
     </div>
     <div class="small-white-text-2">
