Open social media links in new tab
Added "target='_blank' rel='noopener noreferrer'" to <a> tags

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
   <footer>
     <!-- Social media buttons/icons -->
     <h2>Find Me Here On:</h2>
-    <a href="https://github.com/jimmyli17/">Github</a>
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/jimmyli17/">Github</a>
     <span> | </span>
-    <a href="https://linkedin.com/in/jimmeeeli/">LinkedIn</a>
+    <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/in/jimmeeeli/">LinkedIn</a>
     <div class="small-white-text-2">
       <div class="tooltip">
         <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
