Fix LinkedIn Link 3

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h2>Find Me Here On:</h2>
     <a target="_blank" rel="noopener noreferrer" href="https://github.com/jimmyli17/">Github</a>
     <span> | </span>
-    <a target="_blank" rel="noopener noreferrer" href="www.linkedin.com/in/jimmeeeli">LinkedIn</a>
+    <a target="_blank" rel="noopener noreferrer" href="http://www.linkedin.com/in/jimmeeeli">LinkedIn</a>
     <div class="small-white-text-2">
       <div class="tooltip">
         <img id="camera-logo" src="img/camera-logo.png" alt="logo of camera">
