--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
   <section class = "home-hero">
     <div class="container">
-      <h1 class = "tagline"><strong>Software Development Engineer at Amazon</strong><br>
-        <span id="not-bold">University of Rochester Class of 2020</span>
+      <h1 class = "tagline"><strong>Software Development Engineer at Amazon.com, Inc.</strong><br>
+        <span id="not-bold">University of Rochester Alumnus | Class of 2020</span>
       </h1>
       <a href="#portfolio" class="button button-accent" id="see-my-work">See   My   Work</a>
     </div>
