--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class = "home-hero">
     <div class="container">
-      <h1 class = "tagline"><strong>Software Development Engineer at Amazon.com, Inc.</strong><br>
+      <h1 class = "tagline"><strong>Software Development Engineer at Amazon</strong><br>
         <span id="not-bold">University of Rochester Alumnus | Class of 2020</span>
       </h1>
       <a href="#portfolio" class="button button-accent" id="see-my-work">See   My   Work</a>
