--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class = "home-hero">
     <div class="container">
-      <h1 class = "tagline"><strong>Incoming Software Engineer at Amazon</strong><br>
+      <h1 class = "tagline"><strong>Software Engineer at Amazon</strong><br>
         <span id="not-bold">University of Rochester Alumnus | Class of 2020</span>
       </h1>
       <a href="#portfolio" class="button button-accent" id="see-my-work">See   My   Work</a>
@@ -45,14 +45,14 @@
   <section class = "home-about">
     <div class="home-about-textbox">
       <h1 class="heading">Who I Am</h1>
-      <p>Hello! My name is Jimmy and I am an incoming Software Development Engineer (SDE1) at Amazon.com, Inc.
+      <p>Hello! My name is Jimmy and I am a Software Development Engineer (SDE-I) at Amazon.com, Inc.
         I recently completed my undergrad at the University of Rochester
         with a double major in Computer Science (B.S.) and Business (B.A.)
-        and a minor in Chinese back in May 2020. At school, you could've
+        and a minor in Chinese in May 2020. At school, you could've
         found me bunkered in the library working with others on class 
         projects or in the front of the classroom leading workshops and grading
-        exams for the "Data Structures & Algorithms" course on campus. Next month,
-      I will be moving to Seattle, WA to start my new role at Amazon.</p>
+        exams for the "Data Structures & Algorithms" course on campus. This summer,
+      I moved to Seattle, WA to start my new role at Amazon.</p>
       <p>During my free time, I like to build up new programming skills,
         tinker with my own side projects, compete in hack-a-thons, and
         dedicate my time to helping startups develop websites that will
