--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section class = "home-about">
     <div class="home-about-textbox">
       <h1 class="heading">Who I Am</h1>
-      <p>Hello! My name is Jimmy and I am a Software Engineer (L60) at Microsoft, Inc.
+      <p>Hello! My name is Jimmy and I am a software engineer (L60) at Microsoft, Inc.
         Previously, I worked as a software development engineer at Amazon
         on their Advertising Privacy team and in May 2020, I completed my undergrad 
         at the University of Rochester with bachelor degrees in Computer Science (B.S.) 
